--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ title: Modern Blog
 description: Modern-Blog A Elegant template for Jekyll
 keywords: Modern, Blogging, Fun
 author: Wferr
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+baseurl: "/news/" # the subpath of your site, e.g. /blog/
+url: "http://indianpanthertv.github.io" # the base hostname & protocol for your site
